spinner bug fixed